--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,9 @@ jobs:
           [ "${ELAPSED_SECONDS}" == "30" ] && echo watied too long for deployment to be ready && exit 1
         done
         cwm_worker_deployment details test1 minio &&\
-        cwm_worker_deployment history test1 minio
+        cwm_worker_deployment history test1 minio &&\
+        cwm_worker_deployment delete test1 minio --delete-namespace
+        [ "$?" != "0" ] && exit 1
+        sleep 10
+        kubectl get ns test1 && echo namespace still exists && exit 1
+        echo Great Success!
