--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,8 @@ jobs:
         [ "$(cwm_worker_deployment get_hostname test1 minio)" == "minio.test1.svc.cluster.local" ] &&\
         cwm_worker_deployment delete test1 minio --delete-namespace
         [ "$?" != "0" ] && exit 1
-        sleep 10
-        kubectl get ns test1 && echo namespace still exists && exit 1
+        echo waiting for namespace to be deleted
+        while kubectl get ns test1; do sleep 1; done
         echo "${CWM_WORKER_OPERATOR_DEPLOY_KEY}" > cwm_worker_operator_deploy_key &&\
         chmod 400 cwm_worker_operator_deploy_key &&\
         export GIT_SSH_COMMAND="ssh -i $(pwd)/cwm_worker_operator_deploy_key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" &&\
