--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         sudo bin/install_python.sh &&\
         bin/python_init_venv_requirements_module.sh &&\
         bin/minikube_wait.sh &&\
+        bin/prometheus_deploy_wait.sh &&\
         . venv/bin/activate &&\
         pytest &&\
         echo "${CWM_WORKER_OPERATOR_DEPLOY_KEY}" > cwm_worker_operator_deploy_key &&\
